--- a/examples/search.html
+++ b/examples/search.html
@@ -19,7 +19,19 @@
   import {searchBox} from '../src/searchBox.js';
 
   ////// MAIN //////
-
+  const tags = [
+    {
+      id: "MOL_OPEN",
+      description: "Open Structure",
+      tags: ["file","open","pdb","cif","xyz"]
+    },
+    {
+      id: "MOL_MATHS",
+      description: "Arithmetics",
+      tags: ["add","subtract","multiply","divide"]
+    }
+    ];
+  
   let main = document.querySelector('main');
 
   // Init Board
