--- a/examples/search.html
+++ b/examples/search.html
@@ -22,13 +22,21 @@
   const tags = [
     {
       id: "MOL_OPEN",
+      class: "Unknown",
       description: "Open Structure",
       tags: ["file","open","pdb","cif","xyz"]
     },
     {
       id: "MOL_MATHS",
+      class: "Unknown",
       description: "Arithmetics",
       tags: ["add","subtract","multiply","divide"]
+    },
+    {
+      id: "MOL_MONITOR",
+      class: "information",
+      description: "Monitor",
+      tags: ["console","display","log","print","show","tap"]
     }
     ];
   
