--- a/examples/search.html
+++ b/examples/search.html
@@ -28,13 +28,19 @@
     },
     {
       id: "MOL_NUMBER",
-      class: "processing",
+      class: "programming",
       description: "Number",
-      tags: ["value","integer","float"]
+      tags: ["value","variable", "set"]
+    },
+    {
+      id: "MOL_RANGE",
+      class: "programming",
+      description: "Range",
+      tags: ["array","series","list"]
     },
     {
       id: "MOL_MATHS",
-      class: "processing",
+      class: "programming",
       description: "Arithmetics",
       tags: ["add","subtract","multiply","divide"]
     },
