Add mol. components

--- a/examples/select.html
+++ b/examples/select.html
@@ -73,12 +73,12 @@
       },
       {
         id: 21,
-        template:"MOL_COLOR",
+        template:"MOL_COLORMODE",
         metadata: {
           pos: [1180,216],
         },
         state: {
-          color: '#ff900a'
+          mode: 4 // CPK
         }
       }
     ],
