--- a/examples/search.html
+++ b/examples/search.html
@@ -5,7 +5,7 @@
 <title>TINNED - Search Box</title>
 <link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet"> 
 <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
-<link rel="stylesheet" href="../css/tinned.css">
+<link rel="stylesheet" href="../css/searchbar.css">
 
 </head>
 <body>
