--- a/examples/histogram.html
+++ b/examples/histogram.html
@@ -37,50 +37,60 @@
     {
         id: 1,
         template:"MOL_OPEN",
-        metadata: {
-          pos: [315,282],
+        data: {
+          meta: {
+            pos: [315,282],
+          }
         }
       },
       {
         id: 15,
         template:"MOL_COUNTBY",
-        metadata: {
-          pos: [989,190],
-        },
-        state: {
-          prop: 0 // ???
+        data: {
+          meta: {
+            pos: [989,190],
+          },
+          state: {
+            prop: 0 // ???
+          }
         }
       },
       {
         id: 16,
         template:"MOL_ID",
-        metadata: {
-          pos: [570,145],
-        },
-        state: {
-          name: "CA"
+        data: {
+          meta: {
+            pos: [570,145],
+          },
+          state: {
+            name: "CA"
+          }
         }
       },
       {
         id: 17,
         template:"MOL_SELECTED",
-        metadata: {
-          pos: [780,189],
-        },
-        state: {
-          selected: true
+        data: {
+          meta: {
+            pos: [780,189],
+          },
+          state: {
+            selected: true
+          }
         }
       },
       {
         id: 21,
         template:"MOL_HISTOGRAM",
-        metadata: {
-          pos: [1214,186],
-        },
-        state: {
-          bins: 20, // Alphabet
-          min: 0,
-          max: Infinity
+        data: {
+          meta: {
+            pos: [1214,186],
+          },
+          state: {
+            bins: 20, // Alphabet
+            min: 0,
+            max: Infinity
+          }
         }
       }
     ],
