--- a/examples/maths.html
+++ b/examples/maths.html
@@ -37,38 +37,46 @@
     {
         id: 1,
         template:"MOL_NUMBER",
-        metadata: {
-          pos: [717,256],
-        },
-        state: {
-          value: 37
+        data: {
+          meta: {
+            pos: [717,256],
+          },
+          state: {
+            value: 37
+          }
         }
       },
       {
         id: 5,
         template:"MOL_MONITOR",
-        metadata: {
-          pos: [1167,300],
+        data: {
+          meta: {
+            pos: [1167,300],
+          }
         }
       },
       {
         id: 11,
         template:"MOL_NUMBER",
-        metadata: {
-          pos: [722,412],
-        },
-        state: {
-          value: 46
+        data: {
+          meta: {
+            pos: [722,412],
+          },
+          state: {
+            value: 46
+          }
         }
       },
       {
         id: 15,
         template:"MOL_MATH",
-        metadata: {
-          pos: [939,288],
-        },
-        state: {
-          op: 1 // Add
+        data: {
+          meta: {
+            pos: [939,288],
+          },
+          state: {
+            op: 1 // Add
+          }
         }
       }
     ],
