--- a/examples/mol_allnodes.html
+++ b/examples/mol_allnodes.html
@@ -39,7 +39,9 @@
     test.nodes.push({
       id: i,
       template: c.id,
-      metadata: {pos: [x, y]}
+      data: {
+        meta: {pos: [x, y]}
+      }
     });
   });
 
