--- a/examples/histogram.html
+++ b/examples/histogram.html
@@ -19,7 +19,7 @@
 
   import {TINNED} from '../src/tinned.js';
   import {Board} from '../src/core/board.js';
-  import {components} from '../mol/components.js';
+  import {components} from '../components/mol/components.js';
 
   ////// MAIN //////
 
@@ -40,7 +40,8 @@
         data: {
           meta: {
             pos: [315,282],
-          }
+          },
+          state: {}
         }
       },
       {
@@ -49,7 +50,8 @@
         data: {
           meta: {
             pos: [915,263],
-          }
+          },
+          state: {}
         }
       },
       {
@@ -58,7 +60,8 @@
         data: {
           meta: {
             pos: [537,280],
-          }
+          },
+          state: {}
         }
       },
       {
@@ -81,7 +84,8 @@
         data: {
           meta: {
             pos: [720,276],
-          }
+          },
+          state: {}
         }
       }
     ],
@@ -96,7 +100,7 @@
       },      
       {
         eid: 3,
-        sockets: ['fastaout@24','molin@15'],
+        sockets: ['fastaout@24','data@15'],
       },      
       {
         eid: 4,
