--- a/examples/mol.html
+++ b/examples/mol.html
@@ -19,7 +19,7 @@
 
   import {TINNED} from '../src/tinned.js';
   import {Board} from '../src/core/board.js';
-  import {components} from '../mol/components.js';
+  import {components} from '../components/mol/components.js';
 
   ////// MAIN //////
 
@@ -40,7 +40,8 @@
         data: {
           meta: {
             pos: [97,223],
-          }
+          },
+          state: {}
         }
       },
       {
@@ -49,7 +50,8 @@
         data: {
           meta: {
             pos: [268,100],
-          }
+          },
+          state: {}
         }
       },
       {
