--- a/examples/search.html
+++ b/examples/search.html
@@ -19,7 +19,7 @@
 
   import {TINNED} from '../src/tinned.js';
   import {Board} from '../src/core/board.js';
-  import {components} from '../mol/components.js';
+  import {components} from '../components/mol/components.js';
   import {searchBox} from '../src/searchBox.js';
 
   ////// MAIN //////
