--- a/examples/connections.html
+++ b/examples/connections.html
@@ -37,7 +37,7 @@
     nodes: [
     {
         id: 1,
-        template:"MOL_NUMBER",
+        template:"BASX_NUMBER",
         data: {
           meta: {
             pos: [717,256],
@@ -49,7 +49,7 @@
       },
       {
         id: 5,
-        template:"MOL_MONITOR",
+        template:"BASX_MONITOR",
         data: {
           meta: {
             pos: [1167,300],
@@ -59,7 +59,7 @@
       },
       {
         id: 11,
-        template:"MOL_NUMBER",
+        template:"BASX_NUMBER",
         data: {
           meta: {
             pos: [722,412],
@@ -71,7 +71,7 @@
       },
       {
         id: 15,
-        template:"MOL_MATH",
+        template:"BASX_MATH",
         data: {
           meta: {
             pos: [939,288],
