--- a/examples/maths.html
+++ b/examples/maths.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet"> 
 <link rel="stylesheet" href="../css/font-awesome-4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="../css/tinned.css">
-<script type="module" src="../mol/components.js"></script>
+<script type="module" src="../BASX/components.js"></script>
 
 </head>
 <body>
@@ -19,7 +19,7 @@
 
   import {TINNED} from '../src/tinned.js';
   import {Board} from '../src/core/board.js';
-  import {components} from '../components/mol/components.js';
+  import {components} from '../components/basics/components.js';
 
   ////// MAIN //////
 
@@ -36,7 +36,7 @@
     nodes: [
     {
         id: 1,
-        template:"MOL_NUMBER",
+        template:"BASX_NUMBER",
         data: {
           meta: {
             pos: [717,256],
@@ -48,7 +48,7 @@
       },
       {
         id: 5,
-        template:"MOL_MONITOR",
+        template:"BASX_MONITOR",
         data: {
           meta: {
             pos: [1167,300],
@@ -58,7 +58,7 @@
       },
       {
         id: 11,
-        template:"MOL_NUMBER",
+        template:"BASX_NUMBER",
         data: {
           meta: {
             pos: [722,412],
@@ -70,7 +70,7 @@
       },
       {
         id: 15,
-        template:"MOL_MATH",
+        template:"BASX_MATH",
         data: {
           meta: {
             pos: [939,288],
