--- a/examples/histogram.html
+++ b/examples/histogram.html
@@ -46,7 +46,7 @@
       },
       {
         id: 15,
-        template:"PROG_COUNTBY",
+        template:"BASX_COUNTBY",
         data: {
           meta: {
             pos: [915,263],
@@ -66,7 +66,7 @@
       },
       {
         id: 21,
-        template:"PROG_HISTOGRAM",
+        template:"BASX_HISTOGRAM",
         data: {
           meta: {
             pos: [1096,193],
