--- a/examples/connections.html
+++ b/examples/connections.html
@@ -33,7 +33,20 @@
 
   // Load Graph
   let graph = {
-    edges: [],
+    edges : [
+      {
+        eid: 1,
+        sockets: ['value@1','x@15'],
+      },
+      {
+        eid: 2,
+        sockets: ['value@5','yin@11'],
+      },
+      {
+        eid: 3,
+        sockets: ['value@15','data@5'],
+      }
+    ],
     nodes: [
     {
         id: 1,
@@ -86,6 +99,7 @@
 
   board.load(graph);
   board.run();
+//Script for connections
 
 
 </script>
