--- a/examples/connections.html
+++ b/examples/connections.html
@@ -37,10 +37,6 @@
       {
         eid: 1,
         sockets: ['value@1','x@15'],
-      },
-      {
-        eid: 2,
-        sockets: ['value@11','yin@15'],
       }
     ],
     nodes: [
@@ -92,10 +88,10 @@
       }
     ]
   };
-
+  let Edges= new Edges (2,11,15);
   board.load(graph);
   board.run();
-//Script for connections
+  
 
 
 </script>
