--- a/examples/connections.html
+++ b/examples/connections.html
@@ -88,6 +88,11 @@
       }
     ]
   };
+  
+  
+  function Appendnodes(edges){
+    graph.edges.sockets.append(srcID,tgtID); //srcID,tgtID
+  };
   board.load(graph);
   board.run();
   
