--- a/examples/connections.html
+++ b/examples/connections.html
@@ -90,9 +90,11 @@
   };
   
   
-  function Appendnodes(edges){
-    graph.edges.sockets.append(srcID,tgtID); //srcID,tgtID
+  function Appendnodes(edges,srcID,tgtID){
+    edges.sockets.append(srcID,tgtID); //srcID,tgtID
   };
+
+  Appendnodes(graph.edges,'value@11','yin@15')
   board.load(graph);
   board.run();
   
