--- a/examples/connections.html
+++ b/examples/connections.html
@@ -37,6 +37,14 @@
       {
         eid: 1,
         sockets: ['value@1','x@15'],
+      },
+      {
+        eid: 2,
+        sockets: ['value@11','yin@15'],
+      },
+      {
+        eid: 3,
+        sockets: ['value@15','data@5'],
       }
     ],
     nodes: [
