--- a/examples/search.html
+++ b/examples/search.html
@@ -33,7 +33,7 @@
   let board = new Board(main,components);  
   
   // Create SearchBox
-  searchBox(main,components);
+  searchBox2(main,components);
 
 </script>
 </body>
