--- a/examples/search.html
+++ b/examples/search.html
@@ -20,7 +20,7 @@
   import {TINNED} from '../src/tinned.js';
   import {Board} from '../src/core/board.js';
   import {components} from '../components/mol/components.js';
-  import {searchBox} from '../src/searchBox2.js';
+  import {searchBox} from '../src/searchBox.js';
 
   ////// MAIN //////
 
@@ -33,7 +33,7 @@
   let board = new Board(main,components);  
   
   // Create SearchBox
-  searchBox2(main,components);
+  searchBox(main,components);
 
 </script>
 </body>
