--- a/examples/connections.html
+++ b/examples/connections.html
@@ -97,10 +97,10 @@ board.graph.nodes.push(graph.nodes[0]);
 board.graph.nodes.push(graph.nodes[1]);
 board.graph.nodes.push(graph.nodes[2]);
 board.graph.nodes.push(graph.nodes[3]);
-board.run();
+board.load(board.graph);
 board.graph.appendEdge('value@11','yin@15');
 board.load(board.graph);
-
+board.run();
 
 
 </script>
