--- a/examples/search.html
+++ b/examples/search.html
@@ -26,11 +26,13 @@
   // Create Board + Graph
   let board = new Board(main,components);  
   
+  searchBox(main,components);
+
   // Create SearchBox
-  console.log(board.graph);
-  board.graph.appendNode("MOL_COLOR");
-  board.run();
-  board.load(board.graph);
+  //console.log(board.graph);
+  //board.graph.appendNode("MOL_COLOR");
+  //board.run();
+  //board.load(board.graph);
 
 </script>
 </head>
